--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ Logo">
  Welcome to Harbor Light Community Center</center>
  </div>
  <div name="nav">
- Home | About | Services | Events | Contact
+ <ul>
+  <il>Home</il> | <li>About</li> | <li>Services</li> | <li>Events</li> | <li>Contact</li>
+ </ul>
  </div>
  <div class="banner">
  <img src="https://edube.org/uploads/media/default/0001/04/decorative-banner.jpg"
