--- a/index.html
+++ b/index.html
@@ -2,26 +2,21 @@
 <html>
 <head>
  <title>Harbor Light Community Center</title>
-header{
-header
-}
-nav{
-nav
-}
+
 
 </head>
 <body>
  <font face="Arial, sans-serif">
- <div name="header">
+ <header><div>
  <center><img src="https://edube.org/uploads/media/default/0001/04/logo.jpg" alt="Center
-Logo">
+Logo"
  Welcome to Harbor Light Community Center</center>
- </div>
- <div name="nav">
+ </div></header>
+<nav><div>
  <ul>
-  <il>Home</il> | <li>About</li> | <li>Services</li> | <li>Events</li> | <li>Contact</li>
+  <il><a href="">Home</a></il> | <li>About</li> | <li>Services</li> | <li>Events</li> | <li>Contact</li>
  </ul>
- </div>
+ </div></nav>
  <div class="banner">
  <img src="https://edube.org/uploads/media/default/0001/04/decorative-banner.jpg"
 alt="Decorative Banner">
