--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
  <title>Harbor Light Community Center</title>
 
-
 </head>
 <body>
  <font face="Arial, sans-serif">
@@ -21,31 +20,35 @@ Logo"
  <img src="https://edube.org/uploads/media/default/0001/04/decorative-banner.jpg"
 alt="Decorative Banner">
  </div>
- <div>
- <h1>About Us</h1>
+ <main><section>
+ <h2>About Us</h2>
  <p>The Harbor Light Community Center has been at the heart of our community for over
 30 years, offering a wide range of services and programs designed to support and enrich the lives
 of our residents.</p>
  <p><img src="https://edube.org/uploads/media/default/0001/04/community-center.jpg"
 hspace="10" vspace="10"></p>
- </div>
- <div>
- <h1>Our Services</h1>
+ </section>
+ <section>
+ <h2>Our Services</h2>
  <p>From educational workshops and sports leagues to wellness programs and art classes,
 our services are tailored to meet the diverse needs of our community members.</p>
- </div>
- <div>
- <h1>Join Our Events</h1>
+ </section>
+ <section itemtype="http://schema.org/Event">
+ <h2>Join Our Events</h2>
  <p>Our community center is a hub of activity, hosting events throughout the year. Don't
 miss our annual summer festival for fun, food, and festivities for all ages.</p>
  <br>
- Annual Summer Festival:
- Starts: July 20, 2050
- </div>
- <div>
+ <p><strong itemprop="description">Annual Summer Festival:</strong>
+ <br>
+ <time itemprop="startDate">Starts: July 20, 2050</time></p>
+ </section></main>
+ <footer>
  Contact Us
- <p>Have questions or want to get involved? Email us!</p>
- </div>
+ <p>Have questions or want to get involved? Email us!<a href="info@harborlight.com">info@harborlight.com</a></p>
+ </footer>
+  <p>
+   ©2050 Harbor Light Community Center
+  </p>
  </font>
 </body>
 </html>
