--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Logo"
  </div></header>
 <nav><div>
  <ul>
-  <il><a href="">Home</a></il> | <li>About</li> | <li>Services</li> | <li>Events</li> | <li>Contact</li>
+  <il><a href="">Home</a>|</il>  <li><a href="">About</a>|</li>  <li><a href="">Services</a>|</li> <li><a href="">Events</a>|</li>  <li><a href="">Contact</a></li>
  </ul>
  </div></nav>
  <div class="banner">
