--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ Logo"
  </div></header>
 <nav><div>
  <ul>
-  <il><a href="">Home</a>|</il>  <li><a href="">About</a>|</li>  <li><a href="">Services</a>|</li> <li><a href="">Events</a>|</li>  <li><a href="">Contact</a></li>
+  <il><a href="">Home</a>|</il>  <li><a href="#about">About</a>|</li>  <li><a href="#services">Services</a>|</li> <li><a href="events">Events</a>|</li>  <li><a href="#contact">Contact</a></li>
  </ul>
  </div></nav>
- <div class="banner">
+ <div class="banner" aria-hidden="true">
  <img src="https://edube.org/uploads/media/default/0001/04/decorative-banner.jpg"
-alt="Decorative Banner">
+alt="">
  </div>
- <main><section>
+ <main><section id="about">
  <h2>About Us</h2>
  <p>The Harbor Light Community Center has been at the heart of our community for over
 30 years, offering a wide range of services and programs designed to support and enrich the lives
@@ -28,12 +28,12 @@ of our residents.</p>
  <p><img src="https://edube.org/uploads/media/default/0001/04/community-center.jpg"
 hspace="10" vspace="10"></p>
  </section>
- <section>
+ <section id="services">
  <h2>Our Services</h2>
  <p>From educational workshops and sports leagues to wellness programs and art classes,
 our services are tailored to meet the diverse needs of our community members.</p>
  </section>
- <section itemtype="http://schema.org/Event">
+ <section itemtype="http://schema.org/Event" id=events>
  <h2>Join Our Events</h2>
  <p>Our community center is a hub of activity, hosting events throughout the year. Don't
 miss our annual summer festival for fun, food, and festivities for all ages.</p>
@@ -41,7 +41,7 @@ miss our annual summer festival for fun, food, and festivities for all ages.</p>
  <p><strong itemprop="description">Annual Summer Festival:</strong>
  <br>
  <time itemprop="startDate">Starts: July 20, 2050</time></p>
- </section></main>
+ </section id="contact"></main>
  <footer>
  Contact Us
  <p>Have questions or want to get involved? Email us!<a href="info@harborlight.com">info@harborlight.com</a></p>
