--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
 <body>
  <font face="Arial, sans-serif">
- <header><div>
+ <header>
  <center><img src="https://edube.org/uploads/media/default/0001/04/logo.jpg" alt="Center
 Logo"
  Welcome to Harbor Light Community Center</center>
- </div></header>
-<nav><div>
+ </header>
+<nav>
  <ul>
   <il><a href="">Home</a>|</il>  <li><a href="#about">About</a>|</li>  <li><a href="#services">Services</a>|</li> <li><a href="events">Events</a>|</li>  <li><a href="#contact">Contact</a></li>
  </ul>
- </div></nav>
+ </nav>
  <div class="banner" aria-hidden="true">
  <img src="https://edube.org/uploads/media/default/0001/04/decorative-banner.jpg"
 alt="">
