--- a/index.html
+++ b/index.html
@@ -2,18 +2,30 @@
 <html>
 <head>
  <title>Harbor Light Community Center</title>
+<style>
+ .center-and-space-content{
+    text-align:center;property
+    padding: 10px;property
+  }
+  #nav{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
 
+  }
+</style>
+  
 </head>
-<body>
- <font face="Arial, sans-serif">
+<body style="font-family: Arial, sans-serif">
  <header>
- <center><img src="https://edube.org/uploads/media/default/0001/04/logo.jpg" alt="Center
-Logo"
- Welcome to Harbor Light Community Center</center>
+ <div class="center-and-space-content"><img src="https://edube.org/uploads/media/default/0001/04/logo.jpg" alt="Center
+Logo">
+<br>
+ Welcome to Harbor Light Community Center</div>
  </header>
 <nav>
- <ul>
-  <il><a href="">Home</a>|</il>  <li><a href="#about">About</a>|</li>  <li><a href="#services">Services</a>|</li> <li><a href="events">Events</a>|</li>  <li><a href="#contact">Contact</a></li>
+ <ul id="nav">
+  <il><a href=""> Home </a></il> | <li><a href="#about"> About </a></li> | <li><a href="#services"> Services </a></li> | <li><a href="#events"> Events </a></li>|  <li><a href="#contact"> Contact </a></li>
  </ul>
  </nav>
  <div class="banner" aria-hidden="true">
@@ -38,13 +50,12 @@ our services are tailored to meet the diverse needs of our community members.</p
  <p>Our community center is a hub of activity, hosting events throughout the year. Don't
 miss our annual summer festival for fun, food, and festivities for all ages.</p>
  <br>
- <p><strong itemprop="description">Annual Summer Festival:</strong>
- <br>
- <time itemprop="startDate">Starts: July 20, 2050</time></p>
+ <p><strong itemscope itemprop="description">Annual Summer Festival:</strong>
+ <time itemprop="startDate"> Starts: July 20, 2050</time></p>
  </section id="contact"></main>
- <footer>
+ <footer id="contact">
  Contact Us
- <p>Have questions or want to get involved? Email us!<a href="info@harborlight.com">info@harborlight.com</a></p>
+ <p>Have questions or want to get involved? Email us! <a href="info@harborlight.com">info@harborlight.com</a></p>
  </footer>
   <p>
    ©2050 Harbor Light Community Center
